chore: add ci update submodule frangipane repositories

--- a/.github/workflows/submodule-update-frangipane.yml
+++ b/.github/workflows/submodule-update-frangipane.yml
@@ -7,6 +7,9 @@ name: Submodule Updates
 on:
   push:
     branches: [main]
+    paths:
+      - 'scripts/**'
+      - 'tools/**'
 
 ###############
 # Set the Job #
@@ -38,7 +41,7 @@ jobs:
         id: run_action
         uses: releasehub-com/github-action-create-pr-parent-submodule@v1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.RWFRANGIPANE }}
           parent_repository: ${{ env.PARENT_REPOSITORY }}
           checkout_branch: ${{ env.CHECKOUT_BRANCH}}
           pr_against_branch: ${{ env.PR_AGAINST_BRANCH }}
